--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 * {
     margin: 1px;
     padding:1px;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+} */
+
+@font-face    {
+    font-family: "jp-font";
+    src: url('../assets/fonts/Poppins-Regular.ttf');
+}
+
+.html {
+    font-family:"jp-font" ;
 }
 
 .header {
@@ -48,7 +57,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     /* width: 1366px; */
-    height: 578px;
+    height: 500px;
 }
 
 .headquarters{
@@ -57,6 +66,7 @@
 }
 
 .circle{
+    /* display: flex; */
     height: 150px;
     width: 150px;
     border: 0px solid black;
@@ -64,25 +74,33 @@
 }
 
 .hq-items{
-    padding: 1em 2em;
     display: flex;
+    padding: 1em 2em;
     justify-content: space-around;
 }
 
 #contact-us {
-    align-items: center;
+    display: flex;
+    background-color: rgba(239, 239, 251, 0.901);
+    justify-content: space-around;
+    align-items: start;
     padding: 0em 1.5em;
     border-bottom: 1px solid darkslategray;
 }
 
-/* .footer-text { */
+ #right-box {
+     /* justify-content: flex-end; */
+     align-content:flex-end;
+     width: 550px;
+     border: 1px solid grey;
+ }
 
-/* } */
+ textarea {
+    resize: none;
+ }
 
-#cf-form {
-    display: block;
-}
+.footer-text {
+    color: grey;
+    font-size: small;
 
-.cf-form-group {
-    margin-bottom: 1rem;
 }
