--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,153 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-* {
-    margin: 1px;
-    padding:1px;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-} */
-
 @font-face    {
-    font-family: "jp-font";
+    font-family: "Poppins";
     src: url('../assets/fonts/Poppins-Regular.ttf');
 }
 
-.html {
-    font-family:"jp-font" ;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.header {
+body {
+    font-family: "Poppins",Arial,Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
+}
+
+/* .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0em 1.5em ;
     border-bottom: 1px solid darkslategray ;
+} */
+
+#header {
+    height: 578px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+
+.header-name {
+    font-size: 3rem;
+    font-weight: 700;
+    margin: 0.5rem 0 1rem;
+}
+
+.header-name span {
+    color: chocolate;
+}
+
+.header-right img {
+    width: 50%;
+}
+
+.header-right {
+    display: flex;
+    justify-content: center;
+}
+
+#header {
+    grid-template-columns: 1fr;
+    height: fit-content;
+}
+
+.header right {
+    order: -1;
+}
+
+.header-right img {
+    width: 90%;
+}
+
+.header-left {
+    text-align: center;
+    padding-bottom: 5rem;
+}
+
+@media screen and (max-width: 640px) {
+
+
+}
+
+.pre-title::before {
+    content: "";
+    width: 30px;
+    height: 1px;
+    background: black;
+    position: absolute;
+    display: block;
+    left: 0;
+    top: 50%;
+}
+
+.mySlide {
+    display: none;
+}
+
+.fade img {
+    vertical-align: middle;
+    width: 100%;
+    max-height: 578px;
+}
+
+.slideshow {
+    max-width: 1200px;
+    position: relative;
+    margin: auto;
+}
+
+  .burger {
+      display: block;
+      cursor: pointer;
+  }
+  
+.burger div {
+    width: 25px;
+    height: 2px;
+    background-color: black;
+    margin: 7px;
+    transition: all 0.3s;
+    z-index: 99;
+}
+
+.burger {
+    display: none;
+    z-index: 99;
+    position: fixed;
+    top: 33px;
+    right: 35px;
+}
+
+.toggle-burger .line-1 {
+    transform: rotate(-45deg) translate(-5px, 7px);
+}
+
+.toggle-burger .line-2 {
+    opacity: 0;
+}
+
+.toggle-burger .line-3 {
+    transform: rotate(45deg) translate(-5px, -7px);
+}
+
+
+.nav {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    padding: 1rem 0;
 }
 
 .nav-logo img  {
     max-height: 40px;
+    display: flex;
+        align-items: center;
+        font-weight: 700;
+        font-size: 2rem;
 }
 
-.nav {
-    display: flex;
-}
 
 .nav-items {
     padding: 2px 1em;
@@ -60,8 +178,9 @@
     height: 500px;
 }
 
-.headquarters{
-    padding: 3em;
+.portofolio{
+    padding: 1em;
+    border-bottom: 1px solid darkslategray;
 
 }
 
@@ -72,6 +191,18 @@
     border: 0px solid black;
     border-radius: 50%;
 }
+
+.profile {
+    background-color: rgba(239, 239, 251, 0.901);
+    padding: 1em 1em;
+    border-bottom: 1px solid darkslategray;
+}
+
+.our-profile {
+        display: grid;
+        justify-content: space-around;
+}
+
 
 .hq-items{
     display: flex;
@@ -88,16 +219,25 @@
     border-bottom: 1px solid darkslategray;
 }
 
- #right-box {
+#right-box {
      /* justify-content: flex-end; */
      align-content:flex-end;
      width: 550px;
+     /* height:210px; */
      border: 1px solid grey;
- }
+}
 
- textarea {
+input[type="submit"] {
+    width: 100%;
+    padding: 0.5rem 1.3rem;
+    background-color: rgba(136, 227, 241, 0.998);
+    border-radius: 3px;
+}
+
+textarea {
     resize: none;
- }
+    font-family: "Poppins";  
+}
 
 .footer-text {
     color: grey;
